fixed overflow on posts caused by long link text

--- a/wp-content/themes/the-fancy-robot/resources/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/the-fancy-robot/resources/assets/styles/layouts/_posts.scss
@@ -25,5 +25,9 @@
     p {
       line-height: 1.6;
     }
+
+    a {
+      overflow-wrap: break-word;
+    }
   }
 }
